--- a/site/test02.html
+++ b/site/test02.html
@@ -311,8 +311,10 @@
 
 
         #footer {
+            position: absolute;
             height: 100px;
-          
+            background: #000;
+            bottom: 0;
         }
 
         
@@ -439,7 +441,9 @@
                 </div>
             </div>
         </div>
-        <div id="footer"></div>
+        <div id="footer">
+            <h2>ssss</h2>
+    </div>
     </div>
 </body>
 </html>
