--- a/refer-effect/mouseEffect/javascriptME01.html
+++ b/refer-effect/mouseEffect/javascriptME01.html
@@ -329,32 +329,52 @@ tabView.click(function () {
 
             document.querySelector(".cursor").style.cssText = "left:" + x + "; top:" + y;
 
-            //마우스 오버
-            // document.querySelector(".mouseCont .style1").addEventListener("mouseover" , function(){
-            //     document.querySelector(".cursor").classList.add("style1");
-            // });
-            // document.querySelector(".mouseCont .style1").addEventListener("mouseout" , function(){
-            //     document.querySelector(".cursor").classList.add("style1");
-            // });
+        //마우스 오버
+        // document.querySelector(".mouseCont .style1").addEventListener("mouseover" , function(){
+        //     document.querySelector(".cursor").classList.add("style1");
+        // });
+        // document.querySelector(".mouseCont .style1").addEventListener("mouseout" , function(){
+        //     document.querySelector(".cursor").classList.add("style1");
+        // });
 
-            // document.querySelector(".mouseCont .style2").addEventListener("mouseover" , function(){
-            //     document.querySelector(".cursor").classList.add("style2");
-            // });
-            // document.querySelector(".mouseCont .style2").addEventListener("mouseout" , function(){
-            //     document.querySelector(".cursor").classList.add("style2");
-            // });
+        // document.querySelector(".mouseCont .style2").addEventListener("mouseover" , function(){
+        //     document.querySelector(".cursor").classList.add("style2");
+        // });
+        // document.querySelector(".mouseCont .style2").addEventListener("mouseout" , function(){
+        //     document.querySelector(".cursor").classList.add("style2");
+        // });
 
-            // for(let i = 1; i<5; i++){
-            //     document.querySelector(".mouseCont .style" + i).addEventListener("mouseover" , function(){
-            //     document.querySelector(".cursor").classList.add("style" + i);
-            // });
-            //     document.querySelector(".mouseCont .style" + i).addEventListener("mouseout" , function(){
-            //     document.querySelector(".cursor").classList.remove("style" + i);
-            // });
-            // }
+        // for(let i = 1; i<5; i++){
+        //     document.querySelector(".mouseCont .style" + i).addEventListener("mouseover" , function(){
+        //     document.querySelector(".cursor").classList.add("style" + i);
+        // });
+        //     document.querySelector(".mouseCont .style" + i).addEventListener("mouseout" , function(){
+        //  document.querySelector(".cursor").classList.remove("style + i);
+        // });
+        // }
 
-            
-        })
+        // //forEach()
+        // document.querySelectorAll(".mouseCont span").forEach((element , index) => {
+        //     element.addEventListener("mouseover", () => {
+        //         document.querySelector(".cursor").classList.add("style" +(index+1))
+        //     });
+        //     element.addEventListener("mouseover", () => {
+        //         document.querySelector(".cursor").classList.remove("style" +(index+1))
+        //     });
+        // })      
+        
+        //getAttribute
+        document.querySelectorAll(".mouseCont span").forEach((element) => {
+            let style = element.getAttribute("class");
+
+            element.addEventListener("mouseover", () => {
+                document.querySelector(".cursor").classList.add(style)
+            });
+            element.addEventListener("mouseover", () => {
+                document.querySelector(".cursor").classList.remove(style)
+            });
+        })      
+    })
     </script>
 </body>
 
