--- a/site/test03.html
+++ b/site/test03.html
@@ -137,6 +137,7 @@
 
 
         .cont3 .title{
+            margin-top: 200px;
             font-family: 'S-CoreDream';
             width: 100%;
             height: 400px;
@@ -156,7 +157,6 @@
             color: #a5a2a2;
         }
 
-        .cont3 .title span {}
         .cont3 .title span a {
             text-decoration: none;
             color: #fff;
@@ -724,8 +724,35 @@
             background-color: #000;
             height: 150px;
         }
-        #footer h2 {
-            color: #fff;
+        #footer .container {
+            width: 1400px;
+        }
+        .footer .naver {
+            color: rgb(75, 74, 74);
+            width:30%;
+        }
+        .footer h2 {
+        }
+        .footer p {
+            color: rgb(75, 74, 74);
+        }
+        .footer .mid {
+            display: inline-block;
+            width: 50%;
+            text-align: center;
+            margin-left: 330px;
+            font-size: 14px;
+        }
+        .footer .mid span{
+            color: rgb(75, 74, 74);
+        }
+        .footer .guide {
+            float : right;
+        }
+        .footer .guide a{
+            text-decoration: none;
+            color: rgb(75, 74, 74);
+            font-size: 14px;
         }
 
 
@@ -869,7 +896,23 @@
                 </div>
             </div>
             <div id="footer">
-                <h2>dddd</h2>
+                <div class="container">
+                    <div class="footer">
+                       <div class="naver">
+                        <h2>NAVER <strong>CLOVA</strong></h2>
+                        <p>고객센터 1833-5387 | 09:00 - 18:00 (주말, 공휴일 휴무)</p>
+                       </div>
+                        <div class="mid">
+                            <span>Powered by NAVER · LINE</span>
+                        </div>
+                        <div class="guide">
+                            <a href="#">공지사항 |</a>
+                            <a href="#">이용약관 |</a>
+                            <a href="#">CLOVA 채용약관 |</a>
+                            <a href="#">CLOVA JP</a>
+                        </div>
+                    </div>
+                </div>
             </div>
             <!-- //footer -->
         </div>
