--- a/site/test03.html
+++ b/site/test03.html
@@ -728,19 +728,28 @@
             width: 1400px;
         }
         .footer .naver {
+            float: left;
             color: rgb(75, 74, 74);
             width:30%;
+            margin-top: 50px;
         }
         .footer h2 {
+            font-size: 14px;
+        }
+
+        .footer h2 strong{
+            font-size: 25px;
         }
         .footer p {
             color: rgb(75, 74, 74);
+            font-size: 14px;
         }
         .footer .mid {
-            display: inline-block;
-            width: 50%;
+            float: left;
+            width: 30%;
             text-align: center;
-            margin-left: 330px;
+            margin-left: 70px;
+            margin-top: 85px;
             font-size: 14px;
         }
         .footer .mid span{
@@ -748,6 +757,7 @@
         }
         .footer .guide {
             float : right;
+            margin-top: 85px;
         }
         .footer .guide a{
             text-decoration: none;
