--- a/refer-effect/parallaxEffect/javascriptPE02.html
+++ b/refer-effect/parallaxEffect/javascriptPE02.html
@@ -608,6 +608,20 @@
     <script src="../assets/js/custom.js"></script>
     <script src="../assets/js/highlight.min.js"></script>
     <script>
+        // 소스보기
+          document.querySelector(".source button").addEventListener("click", function () {
+            document.querySelector("#cont-wrap").classList.add("show");
+            document.querySelector("#cont-wrap").classList.remove("hide");
+        });
+
+        document.querySelector(".cont-box button").addEventListener("click", function () {
+            document.querySelector("#cont-wrap").classList.add("hide");
+        });
+
+
+
+
+
         document.querySelectorAll(".paraDot ul li a").forEach((element) =>  {
             element.addEventListener("click" , (e) => {
                 e.preventDefault();
