--- a/refer-effect/mouseEffect/javascriptME01.html
+++ b/refer-effect/mouseEffect/javascriptME01.html
@@ -298,14 +298,15 @@ tabView.click(function () {
     <script src="../assets/js/highlight.min.js"></script>
     <script>
 
-        // document.querySelector(".info button").addEventListener("click" , function(){
-        //     document.querySelector("#cont-wrap").classList.add("show");
-        //     document.querySelector("#cont-wrap").classList.remove("hide");
-        // });
+        //소스보기
+        document.querySelector(".info button").addEventListener("click" , function(){
+            document.querySelector("#cont-wrap").classList.add("show");
+            document.querySelector("#cont-wrap").classList.remove("hide");
+        });
      
-        // document.querySelector(".cont-box button").addEventListener("click" , function(){
-        //     document.querySelector("#cont-wrap").classList.add("hide");
-        // }); 
+        document.querySelector(".cont-box button").addEventListener("click" , function(){
+            document.querySelector("#cont-wrap").classList.add("hide");
+        }); 
      
         //출력용 
         window.addEventListener("mousemove" , function(e){
