--- a/refer-effect/mouseEffect/jqueryME01.html
+++ b/refer-effect/mouseEffect/jqueryME01.html
@@ -299,14 +299,14 @@ tabView.click(function () {
     <script src="../assets/js/highlight.min.js"></script>
     <script>
 
-        // document.querySelector(".info button").addEventListener("click" , function(){
-        //     document.querySelector("#cont-wrap").classList.add("show");
-        //     document.querySelector("#cont-wrap").classList.remove("hide");
-        // });
+        document.querySelector(".info button").addEventListener("click" , function(){
+            document.querySelector("#cont-wrap").classList.add("show");
+            document.querySelector("#cont-wrap").classList.remove("hide");
+        });
      
-        // document.querySelector(".cont-box button").addEventListener("click" , function(){
-        //     document.querySelector("#cont-wrap").classList.add("hide");
-        // }); 
+        document.querySelector(".cont-box button").addEventListener("click" , function(){
+            document.querySelector("#cont-wrap").classList.add("hide");
+        }); 
      
         // 출력문
         $(window).mousemove(function(e){
