--- a/test.html
+++ b/test.html
@@ -7,6 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script>
+        function func(){
+            for ( i = 1; i<=7; i++ ){
+                for( j=1; j<=i; j++ ){
+                    document.write(j)
+                }
+            }
+        }
+        func();
+    </script>
 </body>
 </html>
