--- a/test.html
+++ b/test.html
@@ -8,14 +8,16 @@
 </head>
 <body>
     <script>
-        function func(){
-            for ( i = 1; i<=7; i++ ){
-                for( j=1; j<=i; j++ ){
-                    document.write(j)
-                }
-            }
-        }
-        func();
+       function func(){
+           let a = [];
+
+           for( i=1; i<=5; i++ ){
+               a += [i];
+           }
+           document.write(a);
+           console.log(a[1]);
+       }
+       func();
     </script>
 </body>
 </html>
