--- a/refer-effect/parallaxEffect/javascriptPE02.html
+++ b/refer-effect/parallaxEffect/javascriptPE02.html
@@ -74,7 +74,7 @@
       
         <nav class="paraDot">
             <ul>
-                <li><a href="#section1"><span>section1</span></a></li>
+                <li class="active"><a href="#section1"><span>section1</span></a></li>
                 <li><a href="#section2"><span>section2</span></a></li>
                 <li><a href="#section3"><span>section3</span></a></li>
                 <li><a href="#section4"><span>section4</span></a></li>
