--- a/refer-effect/parallaxEffect/jqueryPE03.html
+++ b/refer-effect/parallaxEffect/jqueryPE03.html
@@ -34,7 +34,7 @@
     <!-- header -->
     <header class="paraInfo">
         <h1><a href="index.html">Parallax Effect03 - jQuery</a></h1>
-        <p>패랠랙스 스크로링 효과 - 메뉴 이동</p>
+        <p>패랠랙스 스크로링 효과 - 숨김 메뉴</p>
     </header>
     <!-- //header -->
     ​
@@ -206,7 +206,7 @@
                     <div class="view-title">
                         <ul>
                             <li class="active"><a href="#">HTML</a></li>
-                            <li><a href="#">SCSS</a></li>
+                            <li><a href="#">CSS</a></li>
                             <li><a href="#">Jquery</a></li>
                         </ul>
                     </div>
