--- a/test.html
+++ b/test.html
@@ -8,15 +8,29 @@
 </head>
 <body>
     <script>
+    //    {
+    //        function func(){
+    //            let i = 10, j= 10, k= 30;
+    //            i /= j;
+    //            j -= i;
+    //            k %= j;
+    //            document.write(i);
+    //            document.write(j);
+    //            document.write(k);
+    //        }
+    //        func();
+    //    }
+
        {
            function func(){
-               let i = 10, j= 10, k= 30;
-               i /= j;
-               j -= i;
-               k %= j;
+               let i = 10, hap= 0;
+               while(i > 1){
+                   i--;
+                   if( i % 3 == 1 ){
+                       hap += i;
+                   }
+               }
                document.write(i);
-               document.write(j);
-               document.write(k);
            }
            func();
        }
