--- a/refer-effect/parallaxEffect/javascriptPE01.html
+++ b/refer-effect/parallaxEffect/javascriptPE01.html
@@ -206,7 +206,7 @@
                     <div class="view-title">
                         <ul>
                             <li class="active"><a href="#">HTML</a></li>
-                            <li><a href="#">SCSS</a></li>
+                            <li><a href="#">CSS</a></li>
                             <li><a href="#">Javascirpt</a></li>
                         </ul>
                     </div>
